fix: migrate hologram location to primitive fields; cleanup comments